--- a/Homepage.html
+++ b/Homepage.html
@@ -79,7 +79,7 @@
 
              <div class = "KP"><p><b class = "KPP">Key Points</b><p class = "keypoints">Click For More Info</p></p>
               
-            <a href="Key-Points.html">Software design and implementation happen together, and the amount of planning depends on the system and development method. Object-oriented design involves planning the system’s structure, finding main objects, and showing how they work together using diagrams. Clear interfaces help different parts of the program connect properly. Developers should reuse existing software when possible and use configuration management to handle changes in team projects. Most software is developed on one computer and run on another. Open source development lets others see and improve the code.
+            <a href="Keypoints.html">Software design and implementation happen together, and the amount of planning depends on the system and development method. Object-oriented design involves planning the system’s structure, finding main objects, and showing how they work together using diagrams. Clear interfaces help different parts of the program connect properly. Developers should reuse existing software when possible and use configuration management to handle changes in team projects. Most software is developed on one computer and run on another. Open source development lets others see and improve the code.
 </a>
 
 
